crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_uninferred_spec_var_type.rs
fn rejects_uninferred_spec_var_type()
//@ req ?X == ?Y
//@ ens true
{
}

fn main() {
    rejects_uninferred_spec_var_type();
}
